User notification (#21)
* add new migration for user notification

* add api for user notification

* add documentation for user notification

* feat: add seeder and service to create notification

* feat: improve types and notifications trigger

---------
