# src/index.js
@@ -11,6 +11,7 @@ import dashboard from './api/routes/dashboard.js';
 import courseCategories from './api/routes/course-categories.js';
 import userPayments from './api/routes/user-payments.js';
 import userCourses from './api/routes/user-courses.js';
+import userNotifications from './api/routes/user-notifications.js';
 import courseMaterialStatus from './api/routes/course-material-status.js';
 
 /** @returns {void} */
@@ -30,6 +31,7 @@ function main() {
   dashboard(app);
   userCourses(app);
   userPayments(app);
+  userNotifications(app);
   courseCategories(app);
   courseMaterialStatus(app);
 
